# alhazen-skill-personal-assistant

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json
skills/jobhunt/: SKILL.md  embedding_map.py  job_forager.py  jobhunt.py  pyproject.toml  quality-checks.yaml  schema.tql  skill.yaml
skills/jobhunt/.claude-plugin/: plugin.json
skills/jobhunt/dashboard/: lib.ts  validate_views.py
skills/jobhunt/dashboard/components/: opportunities-board.tsx  opportunity-list.tsx  schema-inspector.tsx
skills/jobhunt/dashboard/pages/jobhunt/: page.tsx
skills/jobhunt/dashboard/routes/embedding-map/: route.ts
skills/jobhunt/dashboard/routes/fit/: route.ts
skills/jobhunt/dashboard/routes/gaps/: route.ts
skills/jobhunt/dashboard/routes/learning/: route.ts
skills/jobhunt/dashboard/routes/opportunities/: route.ts
skills/jobhunt/dashboard/routes/pipeline/: route.ts
skills/jobhunt/dashboard/routes/seekers/: route.ts
skills/jobhunt/dashboard/routes/skills/: route.ts
skills/jobhunt/dashboard/routes/status/: route.ts
skills/jobhunt/dashboard/views/: collection.yaml  company.yaml  contact.yaml  hub.yaml  opportunity.yaml  position.yaml
skills/ops/: SKILL.md  ops.py  pyproject.toml  quality-checks.yaml  schema.tql  skill.yaml
skills/ops/.claude-plugin/: plugin.json
skills/ops/dashboard/: lib.ts
skills/ops/dashboard/components/: commitments-board.tsx  okr-board.tsx  specs-list.tsx  stakeholders-table.tsx  today-panel.tsx  touchpoint-timeline.tsx
skills/ops/dashboard/pages/ops/: page.tsx
skills/ops/dashboard/views/: hub.yaml  stakeholder.yaml
(+203 files in other folders)
