[project]
name = "alhazen-skill-jobhunt"
version = "0.1.0"
description = "Job hunt skill for the Alhazen knowledge notebook framework"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typedb-driver>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
    "qdrant-client>=1.7.0",
    "pymde>=0.1.0",
    "voyageai>=0.3.0",
]

[dependency-groups]
dev = []

# Force CPU-only PyTorch (pymde depends on torch but we don't need CUDA).
# explicit = true so this index is used ONLY for packages pinned to it below
# (torch/torchvision) and is NOT consulted for everything else — otherwise its
# stale requests==2.28.1 shadows PyPI's requests>=2.31.0 and breaks resolution.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
